# ctx

./: .gitignore  README.md  devto-post.md  pyproject.toml
docs/plans/: 2026-03-02-ctx.md
src/ctx/: __init__.py  cli.py  injector.py  scanner.py  store.py
tests/: test_cli.py  test_injector.py  test_scanner.py  test_store.py
