[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctx"
version = "0.1.0"
description = "Save project context packs and inject them into any AI session in one command"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["context-engineering", "ai", "claude", "developer-tools", "cli", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "pyperclip>=1.8.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov", "black", "isort", "mypy", "flake8"]

[project.scripts]
ctx = "ctx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/ctx --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
